Single pixel line artifact with Rotate and Wrapped Translate nodes #38488

Closed
opened 2014-02-04 19:51:45 +01:00 by Greg Zaal · 7 comments
Member

System Information
Windows 64bit, gtx 570

Blender Version
Couldn't find a working version :/ broken in all versions I have (as far back as r57919)

Short description of error
In the compositor, when rotating an image 90 degrees, then translating it (with Wrapping on), a single pixel wide black line appears on the original left border of the image:
2014-02_18.jpg
In older versions (here r57919), this line looks a bit different, broken at the top and bottom but includes horizontal lines as well:
2014-02_20.jpg

If you change the rotation angle to something other than 90, the black lines turn into wedges (which makes sense I guess). So the issue here seems to be the pivot of the rotation is not the exact center. In the above screenshots, it's a 4096x4096 image (4x1024), so there would be an exact center to rotate around.

Exact steps for others to reproduce the error
Add 4k image, rotate by 90 degrees, translate (with wrapping) by any amount on both axes.

**System Information** Windows 64bit, gtx 570 **Blender Version** Couldn't find a working version :/ broken in all versions I have (as far back as r57919) **Short description of error** In the compositor, when rotating an image 90 degrees, then translating it (with Wrapping on), a single pixel wide black line appears on the original left border of the image: ![2014-02_18.jpg](https://archive.blender.org/developer/F75998/2014-02_18.jpg) In older versions (here r57919), this line looks a bit different, broken at the top and bottom but includes horizontal lines as well: ![2014-02_20.jpg](https://archive.blender.org/developer/F76000/2014-02_20.jpg) If you change the rotation angle to something other than 90, the black lines turn into wedges (which makes sense I guess). So the issue here seems to be the pivot of the rotation is not the exact center. In the above screenshots, it's a 4096x4096 image (4x1024), so there would be an exact center to rotate around. **Exact steps for others to reproduce the error** Add 4k image, rotate by 90 degrees, translate (with wrapping) by any amount on both axes.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Lukas Tönne was assigned by Greg Zaal 2014-02-04 19:51:45 +01:00
Author
Member

Added subscriber: @GregZaal

Added subscriber: @GregZaal

Added subscriber: @brecht

Added subscriber: @brecht

This issue was referenced by blender/blender-addons-contrib@d516fedba3

This issue was referenced by blender/blender-addons-contrib@d516fedba3ce57b2ca7bd537b64b31bd0ca3c6bb

This issue was referenced by d516fedba3

This issue was referenced by d516fedba3ce57b2ca7bd537b64b31bd0ca3c6bb
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit d516fedba3.

Closed by commit d516fedba3.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38488
No description provided.